adding opengl-tutorial to load OBJ model by OBJShow.cpp

--- a/realsense/FF_Hands3DViewer/FF_Hands3DViewer_vs2015.vcxproj
+++ b/realsense/FF_Hands3DViewer/FF_Hands3DViewer_vs2015.vcxproj
@@ -123,8 +123,8 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>.;include;res;../common/include;../../include;$(RSSDK_DIR)/include;$(RSSDK_DIR)/sample/common/include;Resource;D:\DIP_2016\realsense\realsense\dep\freeglut\include;D:\DIP_2016\realsense\realsense\dep\glew\include;D:\DIP_2016\realsense\realsense\dep\glm;D:\DIP_2016\realsense\realsense\dep\glfw\include\GLFW;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>WIN64;_DEBUG;_CONSOLE;_WIN64_WINNT=0x0602;GLEW_STATIC;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>.;include;res;../common/include;../../include;$(RSSDK_DIR)/include;$(RSSDK_DIR)/sample/common/include;Resource;../common/freeglut/include;../common/freeglut/include/GL;../common/glew/include;../common/glew/include/GL;$(RSSDK_DIR)/sample/common/freeglut/include;$(RSSDK_DIR)/sample/common/freeglut/include/GL;$(RSSDK_DIR)/sample/common/glew/include;$(RSSDK_DIR)/sample/common/glew/include/GL;D:\DIP_2016\realsense\realsense\dep\glfw\include\GLFW;D:\DIP_2016\realsense\realsense\dep\glm;D:\DIP_2016\realsense\realsense\dep;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>WIN64;_DEBUG;_CONSOLE;_WIN64_WINNT=0x0602;;GLEW_STATIC;FREEGLUT_STATIC;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
@@ -141,11 +141,11 @@
       <AdditionalIncludeDirectories>.;include;res;../common/include;../../include;$(RSSDK_DIR)/include;$(RSSDK_DIR)/sample/common/include;Resource;../common/freeglut/include;../common/freeglut/include/GL;../common/glew/include;../common/glew/include/GL;$(RSSDK_DIR)/sample/common/freeglut/include;$(RSSDK_DIR)/sample/common/freeglut/include/GL;$(RSSDK_DIR)/sample/common/glew/include;$(RSSDK_DIR)/sample/common/glew/include/GL;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ResourceCompile>
     <Link>
-      <AdditionalDependencies>libpxc_d.lib;libpxcutils_d.lib;;glew32s.lib;freeglut.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>libpxc_d.lib;libpxcutils_d.lib;glew32s.lib;freeglut_static.lib;glfw3dll.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>$(OutDir)$(ProjectName)_d.exe</OutputFile>
       <ModuleDefinitionFile>
       </ModuleDefinitionFile>
-      <AdditionalLibraryDirectories>../common/lib/$(PlatformName)/$(PlatformToolset);../../lib/$(PlatformName);$(RSSDK_DIR)/lib/$(PlatformName);$(RSSDK_DIR)/sample/common/lib/$(PlatformName)/$(PlatformToolset);D:\DIP_2016\realsense\realsense\dep\freeglut\lib\x64;D:\DIP_2016\realsense\realsense\dep\glew\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>../common/lib/$(PlatformName)/$(PlatformToolset);../../lib/$(PlatformName);$(RSSDK_DIR)/lib/$(PlatformName);$(RSSDK_DIR)/sample/common/lib/$(PlatformName)/$(PlatformToolset);../common/freeglut/$(PlatformToolset)/$(PlatformName);../common/glew/$(PlatformToolset)/$(PlatformName);$(RSSDK_DIR)/sample/common/freeglut/$(PlatformToolset)/$(PlatformName);$(RSSDK_DIR)/sample/common/glew/$(PlatformToolset)/$(PlatformName);D:\DIP_2016\realsense\realsense\dep\glm;D:\DIP_2016\realsense\realsense\dep\glfw\lib-vc2015;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
       <LinkTimeCodeGeneration>
@@ -196,8 +196,8 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
-      <AdditionalIncludeDirectories>.;include;res;$(RSSDK_DIR)/include;$(RSSDK_DIR)/sample/common/include;Resource;D:\DIP_2016\realsense\realsense\FF_Hands3DViewer\ogl;D:\DIP_2016\realsense\realsense\dep\freeglut\include;D:\DIP_2016\realsense\realsense\dep\glew\include;D:\DIP_2016\realsense\realsense\dep\glm;D:\DIP_2016\realsense\realsense\dep\glfw\include\GLFW;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>WIN64;NDEBUG;_CONSOLE;_WIN64_WINNT=0x0602;GLEW_STATIC;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>.;include;res;../common/include;../../include;$(RSSDK_DIR)/include;$(RSSDK_DIR)/sample/common/include;Resource;../common/freeglut/include;../common/freeglut/include/GL;../common/glew/include;../common/glew/include/GL;$(RSSDK_DIR)/sample/common/freeglut/include;$(RSSDK_DIR)/sample/common/freeglut/include/GL;$(RSSDK_DIR)/sample/common/glew/include;$(RSSDK_DIR)/sample/common/glew/include/GL;D:\DIP_2016\realsense\realsense\dep\glfw\include\GLFW;D:\DIP_2016\realsense\realsense\dep\glm;D:\DIP_2016\realsense\realsense\dep;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>WIN64;NDEBUG;_CONSOLE;_WIN64_WINNT=0x0602;;GLEW_STATIC;FREEGLUT_STATIC;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
@@ -214,8 +214,8 @@
       <AdditionalIncludeDirectories>.;include;res;../common/include;../../include;$(RSSDK_DIR)/include;$(RSSDK_DIR)/sample/common/include;Resource;../common/freeglut/include;../common/freeglut/include/GL;../common/glew/include;../common/glew/include/GL;$(RSSDK_DIR)/sample/common/freeglut/include;$(RSSDK_DIR)/sample/common/freeglut/include/GL;$(RSSDK_DIR)/sample/common/glew/include;$(RSSDK_DIR)/sample/common/glew/include/GL;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ResourceCompile>
     <Link>
-      <AdditionalDependencies>libpxc.lib;libpxcutils.lib;;glew32s.lib;freeglut.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>../common/lib/$(PlatformName)/$(PlatformToolset);../../lib/$(PlatformName);$(RSSDK_DIR)/lib/$(PlatformName);$(RSSDK_DIR)/sample/common/lib/$(PlatformName)/$(PlatformToolset);D:\DIP_2016\realsense\realsense\dep\freeglut\lib\x64;D:\DIP_2016\realsense\realsense\dep\glew\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>libpxc.lib;libpxcutils.lib;glew32s.lib;freeglut_static.lib;glfw3dll.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>../common/lib/$(PlatformName)/$(PlatformToolset);../../lib/$(PlatformName);$(RSSDK_DIR)/lib/$(PlatformName);$(RSSDK_DIR)/sample/common/lib/$(PlatformName)/$(PlatformToolset);../common/freeglut/$(PlatformToolset)/$(PlatformName);../common/glew/$(PlatformToolset)/$(PlatformName);$(RSSDK_DIR)/sample/common/freeglut/$(PlatformToolset)/$(PlatformName);$(RSSDK_DIR)/sample/common/glew/$(PlatformToolset)/$(PlatformName);D:\DIP_2016\realsense\realsense\dep\glm;D:\DIP_2016\realsense\realsense\dep\glfw\include\GLFW;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <OutputFile>$(OutDir)$(ProjectName).exe</OutputFile>
       <ModuleDefinitionFile>
       </ModuleDefinitionFile>
@@ -231,12 +231,18 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\glShowModel.cpp" />
-    <ClCompile Include="src\testObj.cpp" />
+    <ClCompile Include="..\dep\ogllib\controls.cpp" />
+    <ClCompile Include="..\dep\ogllib\objloader.cpp" />
+    <ClCompile Include="..\dep\ogllib\quaternion_utils.cpp" />
+    <ClCompile Include="..\dep\ogllib\shader.cpp" />
+    <ClCompile Include="..\dep\ogllib\tangentspace.cpp" />
+    <ClCompile Include="..\dep\ogllib\text2D.cpp" />
+    <ClCompile Include="..\dep\ogllib\texture.cpp" />
+    <ClCompile Include="..\dep\ogllib\vboindexer.cpp" />
+    <ClCompile Include="src\OBJShow.cpp" />
     <ClCompile Include="src\timer.cpp" />
     <ClCompile Include="src\OpenGLView.cpp" />
     <ClCompile Include="src\HandsController.cpp" />
-    <ClCompile Include="src\tinyObjLoader.cpp" />
     <ClCompile Include="src\Tree.cpp" />
     <ClCompile Include="src\HandsModel.cpp" />
     <ClCompile Include="src\RssdkHandler.cpp" />
@@ -244,7 +250,15 @@
     <ClCompile Include="src\camera.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="include\objLoader.hpp" />
+    <ClInclude Include="..\dep\ogllib\controls.hpp" />
+    <ClInclude Include="..\dep\ogllib\objloader.hpp" />
+    <ClInclude Include="..\dep\ogllib\quaternion_utils.hpp" />
+    <ClInclude Include="..\dep\ogllib\shader.hpp" />
+    <ClInclude Include="..\dep\ogllib\tangentspace.hpp" />
+    <ClInclude Include="..\dep\ogllib\targetver.h" />
+    <ClInclude Include="..\dep\ogllib\text2D.hpp" />
+    <ClInclude Include="..\dep\ogllib\texture.hpp" />
+    <ClInclude Include="..\dep\ogllib\vboindexer.hpp" />
     <ClInclude Include="include\RssdkHandler.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="include\IView.h" />
