--- a/realsense/dep/ogllib/ogllib.vcxproj
+++ b/realsense/dep/ogllib/ogllib.vcxproj
@@ -90,6 +90,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>D:\DIP_2016\realsense\realsense\dep\freeglut\include;D:\DIP_2016\realsense\realsense\dep\glew\include;D:\DIP_2016\realsense\realsense\dep\glm;D:\DIP_2016\realsense\realsense\dep\glfw\include\GLFW;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -121,6 +122,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>D:\DIP_2016\realsense\realsense\dep\freeglut\include;D:\DIP_2016\realsense\realsense\dep\glew\include;D:\DIP_2016\realsense\realsense\dep\glm;D:\DIP_2016\realsense\realsense\dep\glfw\include\GLFW;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
