--- a/realsense/term_proj/term_proj.vcxproj
+++ b/realsense/term_proj/term_proj.vcxproj
@@ -225,6 +225,7 @@
     <ClInclude Include="include\HandsController.h" />
     <ClInclude Include="include\HandsModel.h" />
     <ClInclude Include="include\IView.h" />
+    <ClInclude Include="include\oglModel.h" />
     <ClInclude Include="include\OpenGLView.h" />
     <ClInclude Include="include\RssdkHandler.h" />
     <ClInclude Include="include\Texture.hpp" />
