--- a/realsense/FF_HandsViewer/FF_HandsViewer_vs2015.vcxproj.filters
+++ b/realsense/FF_HandsViewer/FF_HandsViewer_vs2015.vcxproj.filters
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="Source Files">
@@ -12,16 +12,39 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\main.cpp" > <Filter>Source Files</Filter> </ClCompile>
-    <ClCompile Include="src\HandsViewer.cpp" > <Filter>Source Files</Filter> </ClCompile>
-    <ClCompile Include="src\timer.cpp" > <Filter>Source Files</Filter> </ClCompile>
+    <ClCompile Include="src\main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\HandsViewer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\timer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\TMspeech.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="resource.h" > <Filter>Header Files</Filter> </ClInclude>
-    <ClInclude Include="include\timer.h" > <Filter>Header Files</Filter> </ClInclude>
-    <ClInclude Include="resource1.h" > <Filter>Header Files</Filter> </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\timer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="resource1.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="tresource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="hands_viewer.rc" > <Filter>Resource Files</Filter> </ResourceCompile>
+    <ResourceCompile Include="hands_viewer.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
+    <ResourceCompile Include="tmidi.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
