simulate velocity and tempo scroll by PostMessage(hTMIDI, WM_HSCROLL, MAKEWPARAM(SB_THUMBPOSITION,10), (LPARAM)hVelocity);
Play/Pause/Stop Button Click By
PostMessage(hTMIDI, WM_COMMAND, MAKEWPARAM(IDC_PLAY, BN_CLICKED),
(LPARAM)GetDlgItem(hTMIDI, IDC_PLAY));

--- a/realsense/FF_HandsViewer/FF_HandsViewer_vs2015.vcxproj
+++ b/realsense/FF_HandsViewer/FF_HandsViewer_vs2015.vcxproj
@@ -235,8 +235,10 @@
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\HandsViewer.cpp" />
     <ClCompile Include="src\timer.cpp" />
+    <ClCompile Include="src\TMIDI_CTRL.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\TMIDI_CTRL.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="include\timer.h" />
     <ClInclude Include="resource1.h" />
