--- a/realsense/FF_HandsViewer/FF_HandsViewer_vs2015.vcxproj.filters
+++ b/realsense/FF_HandsViewer/FF_HandsViewer_vs2015.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="src\timer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\TMIDI_CTRL.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
@@ -33,6 +36,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="tresource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\TMIDI_CTRL.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
