adding FMOD studio to term proj adding keyboard callback

--- a/realsense/FMOD_PlaySound/FMOD_PlaySound.vcxproj.filters
+++ b/realsense/FMOD_PlaySound/FMOD_PlaySound.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="src\common_platform.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\fmod.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
