--- a/realsense/term_proj/term_proj.vcxproj
+++ b/realsense/term_proj/term_proj.vcxproj
@@ -113,7 +113,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>.;include;$(RSSDK_DIR)/include;$(RSSDK_DIR)/sample/common/include;Resource;../dep/freeglut/include;../dep/glew/include;..\dep\glm;..\dep\assimp\include;$(ProjectDir)..\dep\FMOD\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.;include;FMOD;$(RSSDK_DIR)/include;$(RSSDK_DIR)/sample/common/include;Resource;../dep/freeglut/include;../dep/glew/include;..\dep\glm;..\dep\assimp\include;$(ProjectDir)..\dep\FMOD\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN64;_CRT_SECURE_NO_WARNINGS;_DEBUG;_CONSOLE;_WIN64_WINNT=0x0602;;GLEW_STATIC;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
@@ -176,7 +176,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
-      <AdditionalIncludeDirectories>.;include;$(RSSDK_DIR)/include;$(RSSDK_DIR)/sample/common/include;Resource;../dep/freeglut/include;../dep/glew/include;..\dep\glm;..\dep\assimp\include;$(ProjectDir)..\dep\FMOD\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.;include;FMOD;$(RSSDK_DIR)/include;$(RSSDK_DIR)/sample/common/include;Resource;../dep/freeglut/include;../dep/glew/include;..\dep\glm;..\dep\assimp\include;$(ProjectDir)..\dep\FMOD\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN64;_CRT_SECURE_NO_WARNINGS;NDEBUG;_CONSOLE;_WIN64_WINNT=0x0602;;GLEW_STATIC;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
