z is toward face, so 0 is on the screen and 1.0 is the maximum playing notes, but fmod is very easy to crash

--- a/realsense/term_proj/term_proj.vcxproj
+++ b/realsense/term_proj/term_proj.vcxproj
@@ -228,9 +228,11 @@
     <ClInclude Include="FMOD\common_platform.h" />
     <ClInclude Include="include\camera.h" />
     <ClInclude Include="include\config.h" />
+    <ClInclude Include="include\CursorModel.h" />
     <ClInclude Include="include\Defs.h" />
     <ClInclude Include="include\HandsController.h" />
     <ClInclude Include="include\HandsModel.h" />
+    <ClInclude Include="include\IModel.h" />
     <ClInclude Include="include\IView.h" />
     <ClInclude Include="include\oglModel.h" />
     <ClInclude Include="include\OpenGLView.h" />
