refactoring hand modes play mode: HandsModel.cpp, play_sound.h

--- a/realsense/term_proj/term_proj.vcxproj
+++ b/realsense/term_proj/term_proj.vcxproj
@@ -226,6 +226,7 @@
   <ItemGroup>
     <ClInclude Include="FMOD\common.h" />
     <ClInclude Include="FMOD\common_platform.h" />
+    <ClInclude Include="FMOD\play_sound.h" />
     <ClInclude Include="include\camera.h" />
     <ClInclude Include="include\config.h" />
     <ClInclude Include="include\CursorModel.h" />
